# nlcmd

./: .env.example  .gitignore  LICENSE  README.md  config.py  llm.py  main.py  pyproject.toml  requirements.txt  utils.py
skills/: loader.py  runner.py
skills/sysinfo/: SKILL.md
skills/sysinfo/scripts/: sysinfo.py
src/nlcmd/: __init__.py  config.py  llm.py  main.py  memory.py  utils.py
src/nlcmd/cron/: __init__.py  cli.py  scheduler.py  tasks.py
src/nlcmd/memory/: __init__.py  indexer.py  store.py
test/: eval_test.py  test_memory_indexer.py  test_memory_store.py  test_scheduler.py
