[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlcmd"
version = "0.1.0"
description = "Natural Language Command Line Tool"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "nlcmd"}
]
keywords = ["cli", "natural-language", "shell", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = [
    "pydantic-ai>=1.63.0",
    "pydantic>=2.12.5",
    "typer>=0.24.1",
    "rich>=14.3.3",
    "python-dotenv>=1.2.1",
    "pydantic-ai-skills>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[project.scripts]
nlcmd = "nlcmd.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nlcmd = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B"]
ignore = ["E501"]
